--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.10'
 }
 
-group 'netology.ru'
+group 'ru.netology'
 version '1.0-SNAPSHOT'
 
 repositories {
