--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    testImplementation "junit:junit:4.13.2"
+
+
 }
